layout pronto, breakpoints adicionados, falta tooltip

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
     <div class="block-main__storage">
       <p class="block-main__description-storage">You’ve used <span class="block-main__destac-text">815 GB</span> of your storage</p>
       <div class="block-main__section-storage">
-        <div class="block-main__current-qtd-storage">185 GB Left</div>
+        <div class="block-main__current-qtd-storage">
+          <span class="block-main__current-storage">185</span> 
+          <span class="block-main__unity-storage">GB Left</span>
+        </div>
         <div class="block-main__range-storage">
           <span class="block-main__color-range">
             <span class="block-main__control-range"></span>
